feat: add user update func
